[gd_scene load_steps=18 format=3 uid="uid://nkcv5k8y8j6y"]

[ext_resource type="Script" path="res://scripts/train.gd" id="1_jguvc"]
[ext_resource type="Texture2D" uid="uid://r1m8oboe123h" path="res://assets/tren_body.png" id="2_4f767"]
[ext_resource type="Texture2D" uid="uid://bhghxylgyvhb1" path="res://assets/tren_teker.png" id="3_rsvob"]
[ext_resource type="Texture2D" uid="uid://c316uml5t83po" path="res://assets/tren_ayrac.png" id="4_1xvks"]
[ext_resource type="Texture2D" uid="uid://4853i35du4oy" path="res://assets/duman_particle.png" id="5_c1rtg"]
[ext_resource type="Texture2D" uid="uid://dkuusvk7chsam" path="res://assets/tourist_wagon.png" id="6_rs4l0"]
[ext_resource type="Texture2D" uid="uid://1cwe2t1cqbwm" path="res://assets/bandit_wagon.png" id="7_dh4fy"]
[ext_resource type="Script" path="res://scripts/bandit_body.gd" id="8_ml6tl"]
[ext_resource type="Texture2D" uid="uid://cy6cewtiigx6k" path="res://assets/_0004_silah.png" id="9_1sclx"]

[sub_resource type="Curve2D" id="Curve2D_8sao8"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1930, 95, 0, 0, 0, 0, 99, 654, 0, 0, 0, 0, 133, 662, 0, 0, 0, 0, 247, 641, 0, 0, 0, 0, 332, 615, 0, 0, 0, 0, 395, 579, 0, 0, 0, 0, 488, 533, 0, 0, 0, 0, 576, 499, 0, 0, 0, 0, 633, 488, 0, 0, 0, 0, 698, 485, 0, 0, 0, 0, 761, 491, 0, 0, 0, 0, 846, 507, 0, 0, 0, 0, 936, 529, 0, 0, 0, 0, 1023, 553, 0, 0, 0, 0, 1134, 581, 0, 0, 0, 0, 1219, 594, 0, 0, 0, 0, 1337, 597, 0, 0, 0, 0, 1439, 590, 0, 0, 0, 0, 1582, 595, 0, 0, 0, 0, 1660, 607, 0, 0, 0, 0, 1783, 627, 0, 0, 0, 0, 1957, 680, 0, 0, 0, 0, 2415, 701, 0, 0, 0, 0, 14248, 695)
}
point_count = 24

[sub_resource type="Gradient" id="Gradient_1d0kx"]
offsets = PackedFloat32Array(0, 0.502347, 1)
colors = PackedColorArray(0, 0, 0, 0.843137, 0.231373, 0.231373, 0.231373, 0.580392, 1, 1, 1, 0)

[sub_resource type="Animation" id="Animation_tdq2o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/teker_ayrac:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-36.0617, 36.3878)]
}

[sub_resource type="Animation" id="Animation_7w336"]
resource_name = "teker_ayrac"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/teker_ayrac:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-36.0617, 36.3878), Vector2(-24.0617, 36.3866), Vector2(-23.0604, 48.3864), Vector2(-34.0604, 48.3876), Vector2(-36.0617, 36.3878)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mj0mu"]
_data = {
"RESET": SubResource("Animation_tdq2o"),
"teker_ayrac": SubResource("Animation_7w336")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ss4ki"]
size = Vector2(92.9378, 61.9243)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_to5o1"]
size = Vector2(36, 36)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h373j"]
radius = 18.0
height = 64.0

[node name="train" type="Path2D"]
curve = SubResource("Curve2D_8sao8")
script = ExtResource("1_jguvc")

[node name="PathFollow2D" type="PathFollow2D" parent="."]
position = Vector2(-1329.98, 260.31)
rotation = 0.2078
progress = 622.38
rotates = false

[node name="train" type="CharacterBody2D" parent="PathFollow2D"]
position = Vector2(-5.1577, -24.4622)

[node name="tren" type="Sprite2D" parent="PathFollow2D/train"]
rotation = -0.207694
texture = ExtResource("2_4f767")

[node name="smoke_particle" type="CPUParticles2D" parent="PathFollow2D/train/tren"]
position = Vector2(54.9282, -59.6218)
amount = 10
explosiveness = 0.23
randomness = 0.46
texture = ExtResource("5_c1rtg")
gravity = Vector2(0, -150)
scale_amount_min = 0.0
color_ramp = SubResource("Gradient_1d0kx")

[node name="teker" type="Sprite2D" parent="PathFollow2D/train/tren"]
position = Vector2(-55.0611, 42.3898)
texture = ExtResource("3_rsvob")

[node name="teker2" type="Sprite2D" parent="PathFollow2D/train/tren"]
position = Vector2(-7.06108, 42.3848)
texture = ExtResource("3_rsvob")

[node name="teker3" type="Sprite2D" parent="PathFollow2D/train/tren"]
position = Vector2(39.9389, 42.3798)
texture = ExtResource("3_rsvob")

[node name="AnimationPlayer" type="AnimationPlayer" parent="PathFollow2D/train/tren"]
libraries = {
"": SubResource("AnimationLibrary_mj0mu")
}

[node name="Node2D" type="Node2D" parent="PathFollow2D/train/tren"]
position = Vector2(21.9344, -0.618286)

[node name="teker_ayrac" type="Sprite2D" parent="PathFollow2D/train/tren/Node2D"]
position = Vector2(-36.0617, 36.3878)
rotation = -0.000105619
scale = Vector2(2, 1)
texture = ExtResource("4_1xvks")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PathFollow2D/train"]
rotation = -0.207694
polygon = PackedVector2Array(-81.004, -37.9915, -9.004, -37.9991, -9.00082, -7.99908, 12.9991, -9.0014, 13.9976, -23.0015, 24.9976, -23.0026, 25.9991, -9.00275, 48.9991, -9.00519, 48.9955, -43.0052, 66.9955, -43.0071, 66.9992, -8.00708, 72.9992, -8.00775, 75.9996, -4.00806, 77.0019, 17.9919, 95.0041, 38.9899, 95.0045, 41.9899, 59.0046, 43.9938, 54.0058, 54.9943, 44.0064, 60.9954, 34.0064, 60.9964, 22.0054, 50.9977, 21.0041, 38.9977, 12.0041, 38.9987, 12.0051, 47.9987, 2.00635, 59.9998, -7.99356, 61.0009, -17.9939, 58.0019, -24.9949, 48.0026, -24.9961, 37.0026, -36.996, 38.0039, -37.9948, 49.004, -43.994, 57.0046, -56.9936, 61.006, -68.9942, 55.0073, -74.9952, 45.0079, -75.9961, 37.008, -81.9961, 37.0087)

[node name="tourist_wagon" type="PathFollow2D" parent="."]
position = Vector2(-1476.65, 219.901)
rotation = 0.2078
progress = 470.245
rotates = false

[node name="train" type="CharacterBody2D" parent="tourist_wagon"]
position = Vector2(-5.1577, -24.4622)

[node name="tren" type="Sprite2D" parent="tourist_wagon/train"]
rotation = -0.207694
texture = ExtResource("6_rs4l0")

[node name="teker" type="Sprite2D" parent="tourist_wagon/train/tren"]
position = Vector2(-23.5137, 33.9744)
texture = ExtResource("3_rsvob")

[node name="teker2" type="Sprite2D" parent="tourist_wagon/train/tren"]
position = Vector2(24.4862, 32.9693)
texture = ExtResource("3_rsvob")

[node name="CollisionShape2D" type="CollisionShape2D" parent="tourist_wagon/train"]
position = Vector2(-0.00390625, 0.00799561)
rotation = -0.212486
shape = SubResource("RectangleShape2D_ss4ki")

[node name="bandit_wagon" type="PathFollow2D" parent="."]
position = Vector2(-1580.27, 191.352)
rotation = 0.2078
progress = 362.76
rotates = false

[node name="train" type="CharacterBody2D" parent="bandit_wagon"]
position = Vector2(-5.1577, -24.4622)

[node name="tren" type="Sprite2D" parent="bandit_wagon/train"]
rotation = -0.207694
texture = ExtResource("7_dh4fy")

[node name="teker" type="Sprite2D" parent="bandit_wagon/train/tren"]
position = Vector2(-23.5137, 33.9744)
texture = ExtResource("3_rsvob")

[node name="teker2" type="Sprite2D" parent="bandit_wagon/train/tren"]
position = Vector2(24.4862, 32.9693)
texture = ExtResource("3_rsvob")

[node name="CollisionShape2D" type="CollisionShape2D" parent="bandit_wagon/train"]
position = Vector2(-0.00390625, 0.00799561)
rotation = -0.212486
shape = SubResource("RectangleShape2D_ss4ki")

[node name="bandit_body" type="CharacterBody2D" parent="bandit_wagon"]
rotation = 0.379104
script = ExtResource("8_ml6tl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="bandit_wagon/bandit_body"]
position = Vector2(0, 13)
shape = SubResource("RectangleShape2D_to5o1")

[node name="rifle" type="Sprite2D" parent="bandit_wagon/bandit_body"]
position = Vector2(-6.90063, -1.83789)
texture = ExtResource("9_1sclx")
offset = Vector2(16, 3)

[node name="bandit_hitarea" type="Area2D" parent="bandit_wagon/bandit_body"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bandit_wagon/bandit_body/bandit_hitarea"]
shape = SubResource("CapsuleShape2D_h373j")

[node name="Timer" type="Timer" parent="bandit_wagon/bandit_body"]
wait_time = 2.0
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="bandit_wagon/bandit_body"]
position = Vector2(1.41797, -0.164673)

[connection signal="timeout" from="bandit_wagon/bandit_body/Timer" to="bandit_wagon/bandit_body" method="_on_timer_timeout"]
[connection signal="screen_entered" from="bandit_wagon/bandit_body/VisibleOnScreenNotifier2D" to="bandit_wagon/bandit_body" method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="bandit_wagon/bandit_body/VisibleOnScreenNotifier2D" to="bandit_wagon/bandit_body" method="_on_visible_on_screen_notifier_2d_screen_exited"]
